[package]
name = "ckbfs"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.15.1" }
blake2b-ref = { version = "0.3", default-features = false }
ckbfs-types = { path = "../../../ckbfs-types", default-features = false }
molecule = { version = "0.7.5", default-features = false }

[build-dependencies]
ckb-hash = "0.117"
hex = "0.4.3"


[features]
default = []
release_export = []